2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* tmitronsem01/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove CC_CFLAGS_DEBUG_V.
	CC_CFLAGS_DEFAULT (obsolete).

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove CC_CFLAGS_PROFILE_V.
	Remove CC_LDFLAGS_PROFILE_V.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* tmitronsem01/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-01	Joel Sherrill <joel@OARcorp.com>

	* Per PR47 add support for buffered test output.  This involved
	adding defines to redirect output to a buffer and dump it when
	full, at "test pause", and at exit.  To avoid problems when redefining
	exit(), all tests were modified to call rtems_test_exit().
	Some tests, notable psxtests, had to be modified to include 
	the standard test macro .h file (pmacros.h or tmacros.h) to
	enable this support.
	* tmitronsem01/init.c: Modified.

2002-04-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove ENABLE_GCC28.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).